--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,18 +5,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-    </style>
-    <style name="error_appearance" parent="@android:style/TextAppearance">
-        <item name="android:textColor">@color/colorError</item>
-        <item name="android:textSize">12sp</item>
-    </style>
-
-    <style name="hint_appearance" parent="TextAppearance.Design.Hint">
-        <item name="android:textColor">@color/colorHint</item>
-    </style>
-
-    <style name="counter_appearance" parent="TextAppearance.Design.Counter">
-        <item name="android:textColor">@color/colorHint</item>
+       <!-- <item name="android:navigationBarColor">@colorPrimary</item> -->
     </style>
 
 </resources>
