--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,12 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="login_btnfacebook">30dp</dimen>
+
+    <!-- Text sizes -->
+    <dimen name="text_normal">13sp</dimen>
+    <dimen name="text_big">20sp</dimen>
+    <dimen name="text_huge">27sp</dimen>
+    <dimen name="text_small">11sp</dimen>
+
+
 </resources>
