anadidas varias activities

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,13 +55,13 @@
         android:layout_below="@+id/login_txiPassword"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/cbRemember" />
+        android:id="@+id/login_cbRemember" />
 
     <Button
         android:text="@string/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cbRemember"
+        android:layout_below="@+id/login_cbRemember"
         android:layout_centerHorizontal="true"
         android:onClick="login"
         android:id="@+id/login_btnLogin" />
